Wrote lesson 2.html

--- a/learn/web/basic-tags/2.html
+++ b/learn/web/basic-tags/2.html
@@ -2,11 +2,11 @@ Basic Tags
 <div class="row">
 	<div id="text">
 		<div id="text-inner">
-			<h1>Basic Tags</h1>
-			<h2>Introduction</h2>
-			<div>In this section, we're going to learn about the basic tags that are the building blocks of HTML.</div>
-			<h3>P is for Paragraph</h3>
-			<div>One of the most basic and fundamental tags in HTML is the p tag. P is (really) short for paragraph. As shown in lesson 3, it looks like this: </div>
+			<h1>Headers</h1>
+			<h2>What is a header?</h2>
+			<div>If you look at a newspaper, you'll most likely notice the big black letters that spell out the headline. In HTML, these are called headers, and they're quite useful.</div>
+			<h3>H is for Header</h3>
+			<div>A headers' size can vary. Let's imagine you write headlines for newspapers. You're going to want your text to be able to be visible from outer space! In this case, you would want the biggest header there is! But how would we specify size? Well, we use numbers from 1-6, where 1 is the largest, and 6 is the smallest. So, for your headline to be huge, you'll need to use the <code>&lt;h1>&lt;/h1><code> tag. But what if you had a subtitle to the headline, and you want to make it slightly smaller than the headline, so that people can see it's a subtitle. You decide to use the </code>&lt;h2>&lt;/h2></code>tag. Starting to see a pattern? <code>&lt;h1></code> is the largest header, and <code>&lt;h2></code> is the smallest.</div>
 			<code class="blk">&lt;p>This is a paragraph.&lt;/p></code>
 			<p>To move on, write a set of paragraph tags in between the body tags. You can put any text you want in them.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
