Made chat message mouseover box smaller, fixes #82

--- a/chat/room.html
+++ b/chat/room.html
@@ -1,4 +1,4 @@
-<div class="row" style="height: calc(100% - 120px)">
+﻿<div class="row" style="height: calc(100% - 120px)">
 	<div id="chat" class="half hglt pad scrly"></div>
 	<aside id="aside" class="half umar">
 		<div id="roominfo">
@@ -42,6 +42,7 @@
 		document.getElementById('loginmsg').hidden = false;
 	}
 	ctrls.classList.add('ctrls');
+	ctrls.classList.add('star-flag');
 	ctrlsStar.textContent = '★';
 	ctrlsStar.onclick = function() {
 		socket.send(JSON.stringify({event: this.classList.contains('clkd') ? 'unstar' : 'star', id: parseInt(this.parentNode.parentNode.id)}));
