Fixed typos: 'Javascript' -> 'JavaScript'

--- a/learn/learn.html
+++ b/learn/learn.html
@@ -4,16 +4,16 @@
 		<h2><a href="web/">Web Development</a></h2>
 		<img src="web.png" />
 		<div class="desc shglt">
-			Learn how to use semantic HTML, styling with Cascading Style Sheets, and interactivity with Javascript. You will:
+			Learn how to use semantic HTML, styling with Cascading Style Sheets, and interactivity with JavaScript. You will:
 			<ul class="umar">
 				<li>Build a news site</li>
 				<li>Style your site with CSS</li>
-				<li>Add interactivity with Javascript</li>
+				<li>Add interactivity with JavaScript</li>
 			</ul>
 		</div>
 	</div>
 	<div class="half pad br">
-		<h2><a>Server-side Javascript</a></h2>
+		<h2><a>Server-side JavaScript</a></h2>
 		<img src="nodejs.png" />
 		<div class="desc shglt">
 			Learn how to use Node.js and Mongodb to power a web server. You will:
