--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -126,7 +126,7 @@
 			<line class="cline" />
 			<div class="course">
 				<a>Data types</a>
-				<div class="description">Learn about Javascript datatypes (numbers, strings, and arrays).</div>
+				<div class="description">Learn about JavaScript datatypes (numbers, strings, and arrays).</div>
 			</div>
 			<line class="split" />
 			<div class="js-data-branch">
@@ -166,7 +166,7 @@
 			</div>
 			<div class="course pbump-up">
 				<a>Manipulate CSS</a>
-				<div class="description">Play with CSS - using Javascript.</div>
+				<div class="description">Play with CSS - using JavaScript.</div>
 			</div>
 			<line class="cline bump-up" />
 			<div class="course">
