Replaced >'s with &gt;s

--- a/learn/web/basic-tags/2.html
+++ b/learn/web/basic-tags/2.html
@@ -6,8 +6,8 @@ Basic Tags
 			<h2>What is a header?</h2>
 			<div>If you look at a newspaper, you'll most likely notice the big black letters that spell out the headline. In HTML, these are called headers, and they're quite useful.</div>
 			<h3>H is for Header</h3>
-			<div>A headers' size can vary. Let's imagine you write headlines for newspapers. You're going to want your text to be able to be visible from outer space! In this case, you would want the biggest header there is! But how would we specify size? Well, we use numbers from 1-6, where 1 is the largest, and 6 is the smallest. So, for your headline to be huge, you'll need to use the <code>&lt;h1>&lt;/h1><code> tag. But what if you had a subtitle to the headline, and you want to make it slightly smaller than the headline, so that people can see it's a subtitle. You decide to use the </code>&lt;h2>&lt;/h2></code>tag. Starting to see a pattern? <code>&lt;h1></code> is the largest header, and <code>&lt;h2></code> is the smallest.</div>
-			<code class="blk">&lt;h1>I'm going to be big! :D&lt;/h1>&lt;h2>I'm going to be tiny. :(&lt;/h2></code>
+			<div>A headers' size can vary. Let's imagine you write headlines for newspapers. You're going to want your text to be able to be visible from outer space! In this case, you would want the biggest header there is! But how would we specify size? Well, we use numbers from 1-6, where 1 is the largest, and 6 is the smallest. So, for your headline to be huge, you'll need to use the <code>&lt;h1&gt;&lt;/h1&gt;<code> tag. But what if you had a subtitle to the headline, and you want to make it slightly smaller than the headline, so that people can see it's a subtitle. You decide to use the </code>&lt;h2&gt;&lt;/h2&gt;</code>tag. Starting to see a pattern? <code>&lt;h1&gt;</code> is the largest header, and <code>&lt;h2&gt;</code> is the smallest.</div>
+			<code class="blk">&lt;h1&gt;I'm going to be big! :D&lt;/h1&gt;&lt;h2&gt;I'm going to be tiny. :(&lt;/h2&gt;</code>
 			<p>To move on, write all the possible header tags from largest to smallest, and in each one, put "Smaller".</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
@@ -15,22 +15,22 @@ Basic Tags
 			</div>
 			<div id="failed1" class="failed clearfix">
 				<h2>Try Again</h2>
-				<p>Did you write the tags correctly? Remember, there are 6 sizes, and they look like this: <code>&lt;h1>&lt;/h1>&lt;h2>&lt;/h2>&lt;h3>&lt;/h3>&lt;/h3>&lt;h4>&lt;/h4>&lt;h5>&lt;/h5>&lt;h6>&lt;/h6></code></p>
+				<p>Did you write the tags correctly? Remember, there are 6 sizes, and they look like this: <code>&lt;h1&gt;&lt;/h1&gt;&lt;h2&gt;&lt;/h2&gt;&lt;h3&gt;&lt;/h3&gt;&lt;/h3&gt;&lt;h4&gt;&lt;/h4&gt;&lt;h5&gt;&lt;/h5&gt;&lt;h6&gt;&lt;/h6&gt;</code></p>
 			</div>
 			<div id="failed2" class="failed clearfix">
 				<h2>Almost!</h2>
-				<p>Make sure to write "smaller" in between the header tags, like this: <code>&lt;h1>&lt;/h1></code></p>
+				<p>Make sure to write "smaller" in between the header tags, like this: <code>&lt;h1&gt;&lt;/h1&gt;</code></p>
 			</div>
 		</div>
 		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
-&lt;html>
-	&lt;head>&lt;/head>
-	&lt;body>
-		&lt;!-- Hi! I'm a comment, you're going to learn about me in the next lesson, so go ahead and delete me, and replace me with the header tags.-->
-	&lt;/body>
-&lt;/html></textarea>
+	<textarea id="html">&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+	&lt;head&gt;&lt;/head&gt;
+	&lt;body&gt;
+		&lt;!-- Hi! I'm a comment, you're going to learn about me in the next lesson, so go ahead and delete me, and replace me with the header tags.--&gt;
+	&lt;/body&gt;
+&lt;/html&gt;</textarea>
 	<iframe id="output"></iframe>
 </div>
 <script>
