--- a/learn/web/basic-tags/3.html
+++ b/learn/web/basic-tags/3.html
@@ -3,23 +3,21 @@ Basic Tags
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Tags</h1>
-			<h2>Introduction</h2>
-			<div>In this section, we're going to learn about the basic tags that are the building blocks of HTML.</div>
-			<h3>P is for Paragraph</h3>
-			<div>One of the most basic and fundamental tags in HTML is the p tag. P is (really) short for paragraph. As shown in lesson 3, it looks like this: </div>
-			<code class="blk">&lt;p>This is a paragraph.&lt;/p></code>
-			<p>To move on, write a set of paragraph tags in between the body tags. You can put any text you want in them.</p>
+			<h2>Comments</h2>
+			<div>Before we move on to more advanced tags, we need to go over comments. As you saw in the last lesson, a comment is used to comment (no joke!) on the code. Why would we need to comment on the code? Although it is optional to write comments, and they don't really do anything, it helps to stay organized.</div>
+			<code class="blk">&lt!--This is what a comment looks like. It doesn't do anything.--></code>
+			<p>To move on, write "Hi, i'm a comment." in a comment.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../2/">Move on →</a></small></h2>
+				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../4/">Move on →</a></small></h2>
 			</div>
 			<div id="failed1" class="failed clearfix">
 				<h2>Try Again</h2>
-				<p>Did you write the tags correctly? They look like this: <code>&lt;p>&lt;/p></code></p>
+				<p>Did you write the comment correctly? It looks like this: <code>&lt!--Hi, I'm a comment.--></code></p>
 			</div>
 			<div id="failed2" class="failed clearfix">
 				<h2>Almost!</h2>
-				<p>Don't put anything like tags or the <code>&lt;</code> character between the p tags, just simple text. Also, the <code>&amp;</code> character can cause problems, so avoid that for now too.</p>
+				<p>Did you write the comment correctly? It looks like this: <code>&lt!--Hi, I'm a comment.--></code></p>
 			</div>
 		</div>
 		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
