basic-tags-2 header consistency

--- a/learn/web/basic-tags/2.html
+++ b/learn/web/basic-tags/2.html
@@ -2,8 +2,8 @@ Basic Tags
 <div class="row">
 	<div id="text">
 		<div id="text-inner">
-			<h1>Headers</h1>
-			<h2>What is a header?</h2>
+			<h1>Basic Tags</h1>
+			<h2>Headers</h2>
 			<div>If you look at a newspaper, you'll most likely notice the big black letters that spell out the headline. In HTML, these are called headers, and they're quite useful.</div>
 			<h3>H is for Header</h3>
 			<div>A header's size can vary. Let's imagine you write headlines for newspapers. You're going to want your text to be able to be visible from outer space! In this case, you would want the biggest header there is! But how would we specify size? Well, we use numbers from 1-6, where 1 means the most important (rendered as the largest in your browser), and 6 means the least important (rendered as the smallest in your browser). So, for your headline to be huge, you'll need to use the <code>&lt;h1&gt;&lt;/h1&gt;<code> tag. But what if you had a subtitle to the headline, and you want to make it slightly smaller than the headline, so that people can see it's a subtitle. You decide to use the </code>&lt;h2&gt;&lt;/h2&gt;</code>tag. Starting to see a pattern? <code>&lt;h1&gt;</code> is the largest header, and <code>&lt;h6&gt;</code> is the smallest.</div>
