--- a/learn/web/basic-tags/3.html
+++ b/learn/web/basic-tags/3.html
@@ -5,7 +5,7 @@ Basic Tags
 			<h1>Basic Tags</h1>
 			<h2>Comments</h2>
 			<div>Before we move on to more advanced tags, we need to go over comments. As you saw in the last lesson, a comment is used to comment (no joke!) on the code. Why would we need to comment on the code? Although it is optional to write comments, and they don't really do anything, it helps to stay organized.</div>
-			<code class="blk">&lt!--This is what a comment looks like. It doesn't do anything.--></code>
+			<code class="blk">&lt;!--This is what a comment looks like. It doesn't do anything.--></code>
 			<p>To move on, write "Hi, i'm a comment." in a comment.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
