More small fixes

--- a/learn/web/basic-tags/3.html
+++ b/learn/web/basic-tags/3.html
@@ -13,11 +13,11 @@ Basic Tags
 			</div>
 			<div id="failed1" class="failed clearfix">
 				<h2>Try Again</h2>
-				<p>Did you write the comment correctly? It looks like this: <code>&lt!--Hi, I'm a comment.--></code></p>
+				<p>Did you write the comment correctly? It looks like this: <code>&lt;!--Hi, I'm a comment.--></code></p>
 			</div>
 			<div id="failed2" class="failed clearfix">
 				<h2>Almost!</h2>
-				<p>Did you write the comment correctly? It looks like this: <code>&lt!--Hi, I'm a comment.--></code></p>
+				<p>Did you write the comment correctly? It looks like this: <code>&lt;!--Hi, I'm a comment.--></code></p>
 			</div>
 		</div>
 		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
