--- a/dev/html.html
+++ b/dev/html.html
@@ -37,13 +37,14 @@
 <style>
 	*::-webkit-input-placeholder { color: #888 }
 	*::-moz-placeholder { color: #999 }
-	body, #content, #footer, #main { background: #000 }
+	html, #content, #footer, #main { background: #000 }
 	#main a:hover { color: #4ff }
 	#main a:active { color: #06f }
 	#main :not(input):not(button):not(.red):not(a), #main a:not(:hover):not(:active):not(.red), #footer * { color: #fff }
 	#meta {
 		clear: both;
 		padding: 4px;
+		margin-top: 8px;
 		background: rgba(255, 255, 255, .8);
 		color: #000;
 	}
@@ -128,7 +129,6 @@
 		noPageOverflow = 400,
 		pageOverflowMobile = true,
 		mainContentEl = document.getElementById('main'),
-		mainBottomPad = 18,
 		html = document.getElementById('html'),
 		css = document.getElementById('css'),
 		js = document.getElementById('js'),
