--- a/learn/web/html-intro/4.html
+++ b/learn/web/html-intro/4.html
@@ -4,7 +4,7 @@ Intro to HTML recap
 		<div id="text-inner">
 			<h1>Intro to HTML</h1>
 			<h2>Recap</h2>
-			<div>Congratulations! You now know what HTML is. Let's review:</div>
+			<p>Congratulations! You now know what HTML is. Let's review:</p>
 			<ul>
 				<li>HTML stands for Hyper Text Markup Language - it's a language used to mark up text on the web.</li>
 				<li>HTML is used to provide formatting, layout, and a foundation for other web technologies.</li>
@@ -17,7 +17,7 @@ Intro to HTML recap
 &lt;/html></code>
 				</li>
 			</ul>
-			<div>Next, we'll learn more about tags, and how to format text.</div>
+			<p>Next, we'll learn more about tags, and how to format text.</p>
 			<form action="../../basic-tags/">
 				<button id="check" type="submit">Move on</button>
 			</form>
