--- a/learn/web/basic-tags/1.html
+++ b/learn/web/basic-tags/1.html
@@ -5,8 +5,8 @@ Basic Tags
 			<h1>Basic Tags</h1>
 			<h2>Introduction</h2>
 			<div>In this section, we're going to learn about the basic tags that are the building blocks of HTML.</div>
-			<h3>P is for Paragraph</h3>
-			<div>One of the most basic and fundamental tags in HTML is the p tag. P is (really) short for paragraph. As shown in lesson 3, it looks like this: </div>
+			<h3>"P" is for Paragraph</h3>
+			<p>One of the most basic and fundamental tags in HTML is the p tag. P is (really) short for paragraph. As shown in lesson 3, it looks like this: </p>
 			<code class="blk">&lt;p>This is a paragraph.&lt;/p></code>
 			<p>To move on, write a set of paragraph tags in between the body tags. You can put any text you want in them.</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
