Fixed linking in basic-tags lesson

--- a/learn/web/basic-tags/3.html
+++ b/learn/web/basic-tags/3.html
@@ -16,7 +16,7 @@ Basic Tags
 				<p>Did you write the comment correctly? It looks like this: <code>&lt;!-- --></code></p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="../2/" class="lft">Back</a><a href="../4/" class="rit">Next</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
 &lt;html>
