--- a/learn/web/basic-tags/2.html
+++ b/learn/web/basic-tags/2.html
@@ -29,7 +29,7 @@ Basic Tags
 				<p>Make sure to write "smaller" in between the header tags, like this: <code>&lt;h1>&lt;/h1></code></p>
 			</div>
 		</div>
-		<div id="cntrls"><a href="../../" class="lft">Back</a><a href="../2/" class="rit">Next</a></div>
+		<div id="cntrls"><a href="../1/" class="lft">Back</a><a href="../3/" class="rit">Next</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
 &lt;html>
