--- a/a/head.html
+++ b/a/head.html
@@ -33,7 +33,12 @@
 					<a href="/dev/new/">New</a>
 					<a href="/dev/docs/">Docs</a>
 				</nav>
-				<a href="/qa/">Ask</a>
+				<a href="/qa/">Q&amp;A</a>
+				<nav>
+					<a href="/qa/tag/">Tags</a>
+					<a href="/qa/ask">Ask</a>
+					<a href="/qa/docs/">Tips</a>
+				</nav>
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
